before trying to change services to ministries

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ permalink: pretty
 title: 'Blue Course Community Church'
 
 logo:
-  mobile: "images/BCCC_FullLogo.PNG"
+  mobile: "images/bccc_circle_cropped.png"
   mobile_height: "32px"
   mobile_width: "32px"
   desktop: "images/bccc_namelogo_cropped.png"
