--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -2,26 +2,35 @@ main:
   - name: "About"
     url: "/about/"
     weight: 1
+  - name: "Events"
+    url: "/events/"
+    weight: 2
+  - name: "Messages"
+    url: "/messages/"
+    weight: 3
   - name: "Ministries"
     url: "/services/"
-    weight: 2
+    weight: 4
   - name: "Leadership"
     url: "/team/"
-    weight: 3
+    weight: 5
   - name: "Visitors"
     url: "/visitors/"
-    weight: 4
+    weight: 6
   - name: "Contact"
     url: "/contact/"
-    weight: 5
+    weight: 7
   - name: "Give"
     url: "/give/"
-    weight: 6
+    weight: 8
 
 footer:
   - name: "Home"
     url: "/"
     weight: 1
+  - name: "Events"
+    url: "/events/"
+    weight: 2
   - name: "Contact"
     url: "/contact/"
-    weight: 2
+    weight: 3
