remove google analytics script

--- a/_data/seo.yml
+++ b/_data/seo.yml
@@ -1,4 +1,4 @@
-google_analytics_id: ""  
+google_analytics_id: false
 meta_twitter_site: false
 meta_twitter_creator: false
 copyright_text: 'Copyright &copy; 2023 Blue Course Community Church'
